# ayame_sys

./: CMakeLists.txt  sdkconfig
append/font/: Mplus2-Light-16.vlw  Mplus2-Light-32.vlw  Mplus2-Light-32_missing.txt  ShipporiMincho-Regular-16.vlw  ShipporiMincho-Regular-16_missing.txt  SourceHanSansJP-Light-16.vlw  bin2header.py  font_glyph_checker.py  genshin.vlw  ipaexg-16.vlw  joyo_ghost_griflist.txt  joyo_joyogai_jinmei_griflist.txt  joyo_joyogai_jinmei_griflist_griflist_filtered.txt  mplus2_16.vlw  mplus2_18.vlw  myfont.vlw  myfont1.vlw  myfont2.vlw  myfont3.h  myfont3.vlw  myfont4.h  myfont4.vlw  shippori_18.vlw  shippori_24.vlw  ttf2vlw.py
main/: Button.cpp  Button.hpp  CMakeLists.txt  FontManager.cpp  FontManager.hpp  SDcard.cpp  SDcard.hpp  TouchHandler.cpp  TouchHandler.hpp  TypoWrite.cpp  TypoWrite.hpp  VerticalFont.cpp  VerticalFont.hpp  hello_world_main.cpp  idf_component.yml
main/fonts/: myfont.h
